# poweranalysis

./: .gitignore  analyse_gammel.ipynb  pyproject.toml
notebooks/: case_analysis.ipynb
src/poweranalysis/: config.py
src/poweranalysis/models/: hdd.py
src/poweranalysis/pipeline/: build_dataset.py
src/poweranalysis/weather/: frost_client.py
