[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poweranalysis"
version = "0.1.0"
description = "Energy consumption, weather and air quality analysis"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


